--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>D</span>farhan <span>S</span>libiert</h1>
+            <h1><span>F</span>farhan <span>L</span>libiert</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -42,7 +42,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
-        <h1>Dodi Sanjaya <span></span></h1>
+        <h1>Farhan Libiert <span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
@@ -194,7 +194,7 @@
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>+62 ??? ??? ????</h2>
-            <h2>+82 ??? ??? ????</h2>
+            <h2>+62 ??? ??? ????</h2>
           </div>
         </div>
         <div class="contact-item">
@@ -209,7 +209,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>Medan, Sumatera Utara, Indonesia</h2>
+            <h2>Bogor, Jawa barat, Indonesia</h2>
           </div>
         </div>
       </div>
@@ -221,7 +221,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>D</span>farhan <span>S</span>libiert</h1>
+        <h1><span>F</span>farhan <span>L</span>libiert</h1>
       </div>
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
