--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>F</span>farhan <span>L</span>libiert</h1>
+            <h1><span>F</span>arhan <span>L</span>ibiert</h1>
           </a>
         </div>
         <div class="nav-list">
